[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tsunami-crypto-api"
version = "1.0.0"
description = "Tsunami Crypto Intelligence API — x402 pay-per-request crypto data for AI agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "x402[fastapi]",
]
